# stagger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/fyp/: BodySprite.hpp  Entity.hpp  World.hpp
include/sgr/: Body.hpp  CircleBody.hpp  CircleEntity.hpp  EdgeBody.hpp  EdgeEntity.hpp  RectangleBody.hpp  RectangleEntity.hpp  RenderEntity.hpp  Stagger.hpp  World.hpp
include/stagger/: Body.hpp  CircleBody.hpp  EdgeBody.hpp  RectangleBody.hpp  Stagger.hpp  World.hpp
lib/catch/: catch.hpp
src/: Application.cpp  Application.hpp  main.cpp
src/fyp/: BodySprite.cpp  Entity.cpp  World.cpp
src/sgr/: Body.cpp  CircleBody.cpp  CircleEntity.cpp  EdgeBody.cpp  EdgeEntity.cpp  RectangleBody.cpp  RectangleEntity.cpp  RenderEntity.cpp  World.cpp
src/stagger/: Body.cpp  CircleBody.cpp  EdgeBody.cpp  RectangleBody.cpp  World.cpp
test/fyp/: WorldTest.cpp
test/stagger/: BodyTest.cpp  CircleBodyTest.cpp  EdgeBodyTest.cpp  RectangleBodyTest.cpp  WorldTest.cpp
